--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rabbitshoe",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "rabbitshoe",
-  "main": "server.js",
+  "main": "app.js",
   "repository": "",
   "author": "Victor Chen",
   "dependencies": {
